# time-scheduler

./: Cargo.toml  README.md
.github/workflows/: CI.yaml
examples/: time-scheduler.rs
src/: main.rs
time-scheduler/: Cargo.toml
time-scheduler/examples/: README.md  conference-scheduler.rs  evaluate.rs  instance.json
time-scheduler/src/: lib.rs
ts-gen/: Cargo.toml
ts-gen/src/: main.rs
