[workspace]
members = ["time-scheduler", "ts-gen"]
resolver = "2"

[workspace.dependencies]
time-scheduler = { path = "time-scheduler" }
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fastrand = "2.3.0"
ndarray = "0.16.1"
thiserror = "2.0"
modern-multiset = "1.0.0"
ordered-float = "5.0.0"