[package]
name = "time-scheduler"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
license = "MIT OR Apache-2.0"
description = "A flexible library for scheduling activities in time slots with customizable penalty functions"
homepage = "https://github.com/BartMassey/time-scheduler"
repository = "https://github.com/BartMassey/time-scheduler"
documentation = "https://docs.rs/time-scheduler"
readme = "../README.md"
keywords = ["scheduling", "optimization", "local-search", "timetabling", "constraint-satisfaction"]
categories = ["algorithms"]
publish = false

[badges.maintenance]
status = "actively-developed"

[[example]]
name = "evaluate"
path = "examples/evaluate.rs"

[dependencies]
fastrand = { workspace = true }
ndarray = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
ordered-float = { workspace = true }
version-sync = "0.9"